# De_Dv_Airflow_Local_pro

./: .env.bank-etl  .env.example  .gitignore  BANK_ETL_README.md  CONFIG_FORMAT_GUIDE.md  ETL_SETUP_GUIDE.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  JSON_CONFIG_README.md  MANIFEST.md  PROJECT_BLUEPRINT.md  README.md  REMEDIATION_GUIDE.md  START_HERE.md  VALIDATION_ARTIFACTS.md  VALIDATION_CHECKLIST.md  VALIDATION_REPORT.md  VALIDATION_SUMMARY.md  bank_data.parquet  bank_data_cust_risk_triggers.csv  data_airflow_doc  deploy.sh  docker-compose-bank-etl.yaml  pyproject.toml  requirements.txt  setup.sh  trip_data.csv  wrangler.toml
airflow/: .env.cloudflare.example  CLOUDFLARE_TUNNEL_SETUP.md  docker-compose-simple.yaml  docker-compose.cloudflare.yaml  docker-compose.yaml
airflow/config/: airflow.cfg
airflow/dags/: __init__.py  btot_8999_syn_api_cust_risk_tg.py  pipeline_apps_dag_factory.py
airflow/dags/batch/: __init__.py  bank_cards_and_trips_batch_dag.py  cust_risk_triggers_dag.py  local_batch_pg_cassandra_dag.py  pandas_batch_dag.py  spark_batch_dag.py  sql_batch_dag.py
airflow/dags/streaming/: __init__.py  bank_cards_streaming_dag.py  kafka_streaming_dag.py  local_streaming_pg_cassandra_dag.py  spark_streaming_dag.py
airflow/plugins/: __init__.py
airflow/plugins/config/: public_holidays.json
batch_apps/: __init__.py
batch_apps/pandas_batch/: __init__.py  base_pandas_batch.py  pandas_batch_app.py
batch_apps/spark_batch/: BankCustomerRiskTriggersETL.scala  __init__.py  bank_cust_risk_triggers_etl.py  base_spark_batch.py  build.sbt  postgres_init.sql  postgres_schema.sql  source.sql  spark_batch_app.py
batch_apps/sql_batch/: __init__.py  base_sql_batch.py  sql_batch_app.py
cloudflare/: airflow_gateway_worker.js
docker/base/: Dockerfile.airflow  Dockerfile.batch  Dockerfile.streaming
docker/helm/: Chart.yaml  values.yaml
docker/k8s_services/: airflow_service.yaml  kafka_service.yaml  spark_service.yaml
docker/secrets/: .gitignore  secrets_template.yaml
etl-project/: Makefile  README.md
etl-project/deployment/: dev.yaml  egress.yaml  it.yaml  prod.yaml  uat.yaml
etl-project/helm/: Chart.yaml  values.yaml
etl-project/queries/: lookup_risk_ref.sql  source_query.sql
etl-project/schema/: schema.json
etl-project/spark-job/: local_batch_streaming_runner.py  pyspark.py  schema_validator.py
pipelines/: __init__.py
pipelines/base/: __init__.py  base_pipeline.py  connection_manager.py  pipeline_utils.py
pipelines/configs/: app_connection_config.yaml  bank_cust_risk_triggers_config.json  batch_pipeline_config.yaml  streaming_pipeline_config.yaml
pipelines/egress/: __init__.py  egress_handler.py  egress_rules.yaml
pipelines/shield/: __init__.py  shield_validator.py  shield_values.yaml
pipelines/tech/: __init__.py  adls_module.py  airflow_module.py  cassandra_module.py  docker_module.py  postgres_module.py  spark_runner_module.py
scripts/: cloudflare-build.sh  print_used_commands.py  smoke_check.py
scripts/windows/: cloudflare-build.ps1  install-airflow-autostart.ps1  preflight-etl.ps1  start-airflow-cloudflare.ps1  start-airflow.ps1  stop-airflow-cloudflare.ps1  stop-airflow.ps1  unpause-pipeline-dags.ps1  wait-airflow-ready.ps1
streaming_apps/: __init__.py
streaming_apps/kafka/: __init__.py
streaming_apps/spark_streaming/: __init__.py  base_streaming_app.py  spark_streaming_app.py
tests/: test_connection_manager.py  test_etl_project_full.py  test_etl_project_setup.py  test_local_batch_streaming_runner.py  test_smoke_configs.py  test_tech_modules.py
(+57 files in other folders)
